--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: Blaze's Blog
+email: blaze.fugina@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   I am Blaze Fugina, a former journalist turned full stack software developer. I specialize in developing sites in the MEAN stack -- MongoDB, Express, AngularJS and Node.js. Check out my posts for more about my work in software development.
 baseurl: "/blazes-blog" # the subpath of your site, e.g. /blog
