--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Blaze's Blog
 email: blaze.fugina@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   I am Blaze Fugina, a former journalist turned full stack software developer. I specialize in developing sites in the MEAN stack -- MongoDB, Express, AngularJS and Node.js. Check out my posts for more about my work in software development.
-baseurl: "/blazes-blog" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://blazefugina.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: BlazeFugina
 github_username:  Blaze90809
